# mvx-flash-loan-sc

./: .gitignore  Cargo.toml  wallet.pem
flash-borrower/: Cargo.toml
flash-borrower/interactor/: Cargo.toml  state.toml
flash-borrower/interactor/src/: interact.rs  interactor_main.rs
flash-borrower/interactor/tests/: interact_cs_tests.rs  interact_tests.rs
flash-borrower/meta/: Cargo.toml
flash-borrower/meta/src/: main.rs
flash-borrower/scenarios/: flash_borrower.scen.json
flash-borrower/src/: flash_borrower.rs  flash_borrower_proxy.rs
flash-borrower/tests/: flash_borrower_scenario_go_test.rs  flash_borrower_scenario_rs_test.rs
flash-borrower/wasm/: Cargo.toml
flash-borrower/wasm/src/: lib.rs
flash-lender/: Cargo.toml
flash-lender/interactor/: Cargo.toml  state.toml
flash-lender/interactor/src/: interact.rs  interactor_main.rs  proxy.rs
flash-lender/interactor/tests/: interact_cs_tests.rs  interact_tests.rs
flash-lender/meta/: Cargo.toml
flash-lender/scenarios/: flash_loan.scen.json
flash-lender/src/: flash_loan.rs
flash-lender/tests/: flash_loan_scenario_rs_test.rs
flash-lender/wasm/src/: lib.rs
meta/src/: main.rs
src/: flash_loan.rs
tests/: flash_loan_scenario_go_test.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
