[package]
name = "flash-loan"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["you"]

[lib]
path = "src/flash_loan.rs"

[dependencies.multiversx-sc]
version = "0.57.0"

[dependencies.flash-borrower]
path = "../flash-borrower"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.57.0"
